// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/nebulas/Row renders a default <Row /> 1`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "Row-sc-9u807i-0",
        "isStatic": false,
        "rules": Array [
          "display:flex;flex-direction:",
          [Function],
          ";justify-content:space-between;",
          [Function],
          " *:only-child{margin:0 auto;}*:last-child{margin-bottom:0;}",
        ],
      },
      "defaultProps": Object {
        "padding": null,
        "reverse": false,
      },
      "displayName": "Row",
      "foldedComponentIds": Array [],
      "propTypes": Object {
        "padding": [Function],
        "reverse": [Function],
      },
      "render": [Function],
      "styledComponentId": "Row-sc-9u807i-0",
      "target": "div",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
  padding={null}
  reverse={false}
/>
`;

exports[`components/nebulas/Row renders a padded <Row /> 1`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "Row-sc-9u807i-0",
        "isStatic": false,
        "rules": Array [
          "display:flex;flex-direction:",
          [Function],
          ";justify-content:space-between;",
          [Function],
          " *:only-child{margin:0 auto;}*:last-child{margin-bottom:0;}",
        ],
      },
      "defaultProps": Object {
        "padding": null,
        "reverse": false,
      },
      "displayName": "Row",
      "foldedComponentIds": Array [],
      "propTypes": Object {
        "padding": [Function],
        "reverse": [Function],
      },
      "render": [Function],
      "styledComponentId": "Row-sc-9u807i-0",
      "target": "div",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
  padding={100}
  reverse={false}
/>
`;

exports[`components/nebulas/Row renders a reversed <Row /> 1`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "Row-sc-9u807i-0",
        "isStatic": false,
        "rules": Array [
          "display:flex;flex-direction:",
          [Function],
          ";justify-content:space-between;",
          [Function],
          " *:only-child{margin:0 auto;}*:last-child{margin-bottom:0;}",
        ],
      },
      "defaultProps": Object {
        "padding": null,
        "reverse": false,
      },
      "displayName": "Row",
      "foldedComponentIds": Array [],
      "propTypes": Object {
        "padding": [Function],
        "reverse": [Function],
      },
      "render": [Function],
      "styledComponentId": "Row-sc-9u807i-0",
      "target": "div",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
  padding={null}
  reverse={true}
/>
`;
